[FIX] GROMO-1659 결과 묶음 완료와 내부 호출 경계 보강
- 정산 슬롯의 내구 완료 집합으로 지연 결과·환불 발송을 묶는다
- 내부 경로·공백 서비스 자격·nullable 적격성 입력을 검증한다
- 목표 문구를 실제 템플릿 언어로 렌더한다
- 테스트 컨텍스트별 DB 스키마로 종료 시 테이블 삭제 간섭을 막는다

검증: 서버별 norm 전체, Python43, 계약·체크섬, amd64 이미지3개 통과